--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <h1> Luke for President! </h1>
+<p> Vote Luke for President.  Don't waste your vote on anyone else.  The only effective democracy is an informed vote so vote for Luke. </p>
