--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
 <h1> Luke for President! </h1>
-<p> Vote Luke for President.  Don't waste your vote on anyone else.  The only effective democracy is an informed vote so vote for Luke. </p>
+
+<p> 
+    Vote Luke for President.
+    Don't waste your vote on anyone else.  
+    The only effective democracy is an informed vote so vote for Luke. 
+</p>
+
+<img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Seal_of_the_President_of_the_United_States.svg/1200px-Seal_of_the_President_of_the_United_States.svg.png" />
