--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
     The only effective democracy is an informed vote so vote for Luke. 
 </p>
 
-<img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Seal_of_the_President_of_the_United_States.svg/1200px-Seal_of_the_President_of_the_United_States.svg.png" />
+<img src = "https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjD_ZKkytvZAhXozIMKHROWC0gQjRwIBg&url=http%3A%2F%2Fwww.fanpop.com%2Fclubs%2Fluke-skywalker%2Fimages%2F32640191%2Ftitle%2Fluke-4-president-08-photo&psig=AOvVaw16CTVzEA4T58iDhqrxyDe4&ust=1520559109070258" />
