--- a/index.html
+++ b/index.html
@@ -6,4 +6,6 @@
     The only effective democracy is an informed vote so vote for Luke. 
 </p>
 
+<linkn rel='stylesheet' type='texxt/css' href={{ site.baseurl }}/styles.css'>
+
 <img src = "https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjD_ZKkytvZAhXozIMKHROWC0gQjRwIBg&url=http%3A%2F%2Fwww.fanpop.com%2Fclubs%2Fluke-skywalker%2Fimages%2F32640191%2Ftitle%2Fluke-4-president-08-photo&psig=AOvVaw16CTVzEA4T58iDhqrxyDe4&ust=1520559109070258" />
