--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@
 
 <linkn rel='stylesheet' type='text/css' href={{ site.baseurl }}/styles.css'>
 
-<img src = "https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjD_ZKkytvZAhXozIMKHROWC0gQjRwIBg&url=http%3A%2F%2Fwww.fanpop.com%2Fclubs%2Fluke-skywalker%2Fimages%2F32640191%2Ftitle%2Fluke-4-president-08-photo&psig=AOvVaw16CTVzEA4T58iDhqrxyDe4&ust=1520559109070258" />
+<img src = "https://upload.wikimedia.org/wikipedia/commons/6/6a/Presidential_Seal_of_the_Democratic_Republic_of_the_Congo.svg" />
