--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     The only effective democracy is an informed vote so vote for Luke. 
 </p>
 
-<linkn rel='stylesheet' type='text/css' href={{ site.baseurl }}/styles.css'>
+<link rel='stylesheet' type='text/css' href={{ site.baseurl }}/styles.css'>
 
 <img src = "https://upload.wikimedia.org/wikipedia/commons/6/6a/Presidential_Seal_of_the_Democratic_Republic_of_the_Congo.svg" />
